ci: fix e2e test wait for inway to be set as org inway
